--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actually Real</title>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="portfolio_pair_programmed">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <!-- Performance: Preconnect to Google Fonts origins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <title>portfolio_pair_programmed</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
-    <h1> It's True.</h1>
-
-    <style>
-        h1 {
-            text-align: center;
-            font-size: 120px;
-            font-family: Helvetica, Verdana, Arial;
-        }
-    </style>
-
-
-<div id="3d34c136-2276-4a8f-a45e-1f0c5b1fd41f" style="z-index: 2147483647 !important; display: block !important;"></div></body></html>
+  <script>
+    // Configure Flutter Web to use the HTML renderer for smaller initial downloads
+    window.flutterConfiguration = { renderer: "html" };
+  </script>
+  <script src="flutter_bootstrap.js" async></script>
+</body>
+</html>
